fixed image scaling on mobile

--- a/public/styles/shop.css
+++ b/public/styles/shop.css
@@ -385,7 +385,17 @@
     }
 }
 
-/* @media screen and (max-width: 600px) {
+@media screen and (max-width: 400px) {
 
+
+    #Vehicles li .carImage{
+        width: 150px !important;
+    }
+    .imgContainer{
+        width: 150px;
+    }
+    .imgContainer img{
+        width: 150px;
+    }
     
-} */
+}
